[package]
name = "egui_wgpu_backend"
version = "0.36.0"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
edition = "2024"
description = "Backend code to use egui with wgpu."
homepage = "https://github.com/hasenbanck/egui_wgpu_backend"
repository = "https://github.com/hasenbanck/egui_wgpu_backend"
license = "MIT OR Apache-2.0"
readme = "README.md"
resolver = "2"

[features]
default = []
web = []

[dependencies]
egui = { version = "0.32", features = ["bytemuck"] }
wgpu = "28.0.0"
bytemuck = "1.18"
